--- a/master/package.json
+++ b/master/package.json
@@ -36,6 +36,7 @@
     "gulp-babel": "^7.0.0",
     "gulp-cli": "^1.4.0",
     "gulp-concat": "^2.6.1",
+    "gulp-less": "^3.4.0",
     "gulp-sourcemaps": "^2.6.1"
   }
 }
