--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@fortawesome/fontawesome-free": "^5.6.3",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "electron": "^4.0.1",
     "nodejs-websocket": "^1.7.2",
