--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postbuild:electron-main": "cpx package.json dist/electron",
     "build:electron-renderer": "ng build electron",
     "build:electron": "npm run build:electron-renderer && npm run build:electron-main",
+    "build:theme": "node-sass src/theme.scss dist/theme.css",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -17,11 +18,13 @@
   "main": "index.js",
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
+    "@angular/animations": "^7.1.4",
+    "@angular/cdk": "^7.2.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
+    "@angular/material": "^7.2.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
@@ -52,6 +55,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-electron-devkit": "^0.11.0",
+    "node-sass": "^4.11.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
