--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@angular/platform-browser": "13.0.1",
     "@angular/platform-browser-dynamic": "13.0.1",
     "@angular/router": "13.0.1",
+    "howler": "2.2.3",
     "node-hid": "2.1.1",
     "rxjs": "7.4.0",
     "tslib": "^2.1.0",
